Fix withdraw guidance spilling outside page

--- a/app/assets/stylesheets/components/_markdown-guidance.scss
+++ b/app/assets/stylesheets/components/_markdown-guidance.scss
@@ -53,4 +53,5 @@
   padding: 10px;
   background-color: govuk-colour("grey-3");
   white-space: pre-line;
+  word-break: break-word;
 }
